<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <ImageView
        android:id="@+id/myImageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.3"
        android:background="@drawable/pic10"
        android:src="@drawable/pic10" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:fontFamily="serif"
        android:gravity="center"
        android:layout_marginTop="150dp"
        android:text="@string/movieapp"
        android:textColor="@color/green"
        android:textSize="50sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/Home"
        android:textColor="@color/white"
        android:textSize="27sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/signInButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_special_background"
        android:insetTop="5dp"
        android:text="@string/sign_in"
        android:textSize="16sp"
        android:translationX="15dp"
        android:translationY="15dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="25dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="73dp"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:text="@string/no_account"
            android:textColor="@color/white"
            android:textSize="27sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/signUpButton"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:background="@drawable/button_special_background"
            android:orientation="vertical"
            android:text="@string/sign_up"
            android:textSize="22sp" />
    </LinearLayout>
</FrameLayout>
