<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="25dp">

        <ImageButton
            android:id="@+id/right_arrow_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:contentDescription="@string/right_arrow_button"
            android:src="@drawable/rounded_arrow_back_24"
            app:tint="#FFFFFF" />

        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginBottom="6dp"
            android:gravity="start"
            android:text="@string/welcome_message"
            android:textColor="@color/dark_blue"
            android:textSize="25sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:autofillHints=""
            android:hint="@string/username_hint"
            android:minHeight="48dp"
            android:textColor="@color/light_gray"
            android:textColorHint="@color/light_gray" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:autofillHints=""
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColor="@color/blue"
            android:textColorHint="@color/light_gray" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="18dp"
            android:backgroundTint="@color/light_gray"
            android:textColor="@color/blue"
            android:text="@string/login_button" />

        <Button
            android:id="@+id/RegisterButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="18dp"
            android:backgroundTint="@color/light_gray"
            android:textColor="@color/blue"
            android:text="@string/register_button" />
    </LinearLayout>


    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigationView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        app:menu="@menu/drawer_menu" />

</androidx.drawerlayout.widget.DrawerLayout>
