
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">
    <EditText
        android:id="@+id/etTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/light_gray"
        android:hint="Movie Title"
        android:inputType="text" />

    <EditText
        android:id="@+id/etDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Description (optional)"
        android:inputType="text"
        android:textColorHint="@color/light_gray" />

    <EditText
        android:id="@+id/etYear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/light_gray"
        android:hint="Year (optional)"
        android:inputType="number" />

    <EditText
        android:id="@+id/etDirector"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/light_gray"
        android:hint="Director (optional)"
        android:inputType="text" />

    <EditText
        android:id="@+id/etRating"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/light_gray"
        android:hint="@string/rating_0_10_optional"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/etImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/light_gray"
        android:hint="@string/image_url_optional"
        android:inputType="textUri" />
    <EditText
        android:id="@+id/etCategories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:textColorHint="@color/light_gray"
        android:hint="@string/categories"/>
    <EditText
        android:id="@+id/etPath"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:textColorHint="@color/light_gray"
        android:hint="@string/video_path"
        android:inputType="text"
        />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit" />
</LinearLayout>
