<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/dark_gray"
    android:orientation="vertical"
    android:padding="25dp">

    <ImageButton
        android:id="@+id/home_arrow_button"
        android:layout_width="40dp"
        android:layout_height="37dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="?attr/selectableItemBackground"
        android:contentDescription="@string/right_arrow_button"
        android:src="@drawable/rounded_arrow_back_24"
        app:tint="#FFFFFF" />

    <EditText
        android:id="@+id/movieSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:autofillHints=""
        android:hint="@string/search_movie"
        android:textColorHint="@color/light_gray"
        android:textColor="@color/blue" />

    <Button
        android:id="@+id/SearchButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="18dp"
        android:backgroundTint="@color/light_gray"
        android:textColor="@color/blue"
        android:text="@string/search" />

</LinearLayout>
